ExtraCO
import pandas as pd
import random
from datetime import date, timedelta

def generate_synthetic_data(num_rows=100):
    data = []
    today = date.today()

    db_names = ["salesdb", "customerdb", "productdb"]
    table_names = {
        "salesdb": ["orders", "customers", "products"],
        "customerdb": ["users", "profiles", "transactions"],
        "productdb": ["inventory", "suppliers", "reviews"]
    }

    # generate data for the last 10 days
    for day_offset in range(10):
        current_date = today - timedelta(days=day_offset)
        for db_name in db_names:
            for table_name in table_names[db_name]:
                # simulate space utilization with some randomness
                base_space = random.randint(100, 1000)  # base space in mb
                space_utilization = round(base_space * random.uniform(0.8, 1.2), 2) 

                # skewness (assume a simple distribution for now)
                skewness = random.choice(["low", "medium", "high"])

                # access count (simulate some daily variation)
                access_count = random.randint(500, 5000)

                # growth% - calculate based on previous day if available
                if day_offset &gt; 0:
                    previous_day_data = next(
                        (item for item in data if item[0] == (current_date + timedelta(days=1)) 
                         and item[1] == db_name and item[2] == table_name),
                        None #Corrected Line
                    )
                    if previous_day_data:
                        previous_space = previous_day_data[3]
                        growth = ((space_utilization - previous_space) / previous_space) * 100
                        growth = round(growth, 2)
                    else:
                        growth = 0  # no previous day data
                else:
                    growth = 0  # first day, no growth

                data.append([current_date, db_name, table_name, space_utilization, skewness, access_count, growth])

    return data

# example usage:
synthetic_data = generate_synthetic_data()

# create the dataframe
df = pd.DataFrame(synthetic_data, columns=[
    'logdate', 'db_name', 'table_name', 'dbs - space utilization (mb)', 'skeweness', 'access count', 'growth%'
])

# print the dataframe (optional)
print(df) 

getting below error, pelase fix
Cell In[62], line 32
    if day_offset &gt; 0:
                     ^
SyntaxError: invalid syntax
